# skat

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  action.h  design.txt
.github/workflows/: build.yml  codeql-analysis.yml  markdownlint.yml  shellcheck.yml
.run/: Skat Client (DCM).run.xml  Skat Client (Günther).run.xml  Skat Client (Peter).run.xml  Skat Client (Reconnect).run.xml  Skat Client Graphical (Local).run.xml  Skat Client Graphical (Remote).run.xml  Skat Client Graphical.run.xml  Skat Client.run.xml  Skat Server (Other Port).run.xml  Skat Server.run.xml
conf/: conf.h
defs/: atomic_queue.def  atomic_queue_header.def  fast_ll.def
include/: connection.h  ctimer.h  event.h  server.h  skat.h
include/KHR/: khrplatform.h
include/client/: client_constants.h  color.h  console_input.h  constants.h  game_rules_printer.h  line_render.h  linmath.h  shader.h  text_render.h  vertex.h
include/glad/: glad.h
include/skat/: action.h  atomic_queue.h  byte_buf.h  card.h  card_printer.h  (+21 more)
lib/: Makefile  action.h  atomic_queue.c  atomic_queue.h  card.c  card.h  card_collection.c  connection.c  connection.h  dep_graph.sh  design.txt  event.h  game_rules.h  main_client.c  main_server.c  player.c  player.h  server.c  server.h  skat.c  skat.h  util.c  util.h
shader/: line.frag  line.vert  rainbow_text.frag  rainbow_text.vert  sprite.frag  sprite.vert  test.frag  test.fs  test.vert  text.frag  text.vert
src/: card.c  connection.c  ctimer.c  main.c  main_server.c  server.c  skat.c  skat_server_main.c  stich.c  util.c
tools/: dep_graph.sh  run_with_debug_log.sh
(+55 files in other folders)
